2025-09-22T00:57:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17901462722 # 774
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 194 261 / 197 264
* notice: next accum: outdated-unq outdated-all / unq all: 194 261 / 198 265
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-21]

2025-09-21T00:58:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17886950236 # 773
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-21
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 194 261 / 196 263
* notice: next accum: outdated-unq outdated-all / unq all: 194 261 / 197 264
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-20]

2025-09-20T00:51:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17873031644 # 772
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-20
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 194 261 / 195 262
* notice: next accum: outdated-unq outdated-all / unq all: 194 261 / 196 263
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-19]

2025-09-16T00:52:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17750928128 # 768