@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-22T00:57:57Z",
+  "timestamp" : "2025-09-23T00:52:43Z",
   "count_outdated" : 261,
   "uniques_outdated" : 194,
-  "count" : 265,
-  "uniques" : 198,
+  "count" : 266,
+  "uniques" : 199,
   "clones" : [
     {
       "timestamp": "2025-09-15T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-09-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
