@@ -1,3 +1,12 @@
+2025-09-23T00:52:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17932623684 # 775
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
+* notice: last 14d: unq all: 5 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 194 261 / 198 265
+* notice: next accum: outdated-unq outdated-all / unq all: 194 261 / 199 266
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-09-22]
+
 2025-09-22T00:57:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17901462722 # 774
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
